Use the infrastructure ALB instead of a new one

--- a/stacks/legacy-support/root.yml
+++ b/stacks/legacy-support/root.yml
@@ -16,22 +16,30 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
+  # VPC ########################################################################
   VPC:
     Type: "AWS::EC2::VPC::Id"
-  VPCSubnet1:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCSubnet2:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCSubnet3:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCCertificateArn:
+  # Load Balancer ##############################################################
+  PlatformALBDNSName:
     Type: String
+  PlatformALBFullName:
+    Type: String
+  PlatformALBCanonicalHostedZoneID:
+    Type: String
+  PlatformALBHTTPListenerArn:
+    Type: String
+  PlatformALBHTTPSListenerArn:
+    Type: String
+  PlatformALBListenerStripeProxyPriorityPrefix:
+    Type: String
+  # ECS Cluster ################################################################
   ECSCluster:
     Type: String
   ECSServiceAutoscaleIAMRoleArn:
     Type: String
   ECSServiceIAMRole:
     Type: String
+  # App ENV #################################################################
   EcrRegion:
     Type: String
 Resources:
@@ -43,10 +51,12 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         VPC: !Ref VPC
-        VPCSubnet1: !Ref VPCSubnet1
-        VPCSubnet2: !Ref VPCSubnet2
-        VPCSubnet3: !Ref VPCSubnet3
-        VPCCertificateArn: !Ref VPCCertificateArn
+        PlatformALBDNSName: !Ref PlatformALBDNSName
+        PlatformALBFullName: !Ref PlatformALBFullName
+        PlatformALBCanonicalHostedZoneID: !Ref PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !Ref PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !Ref PlatformALBHTTPSListenerArn
+        PlatformALBListenerStripeProxyPriorityPrefix: !Ref PlatformALBListenerStripeProxyPriorityPrefix
         ECSCluster: !Ref ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !Ref ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
