--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -159,6 +159,8 @@ Mappings:
       prefix: 38
     Crier:
       prefix: 42
+    StripeProxy:
+      prefix: 46
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -217,10 +219,12 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
-        VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
+        PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
+        PlatformALBFullName: !GetAtt LoadBalancersStack.Outputs.PlatformALBFullName
+        PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
+        PlatformALBListenerStripeProxyPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, StripeProxy, prefix]
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
