Wipe out alb related resources

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -56,30 +56,30 @@ Mappings:
       ContainerMemory: 400
       ContainerCpu: 128
 Resources:
-  # StripeProxyALBTargetGroup:
-  #   Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
-  #   Properties:
-  #     HealthCheckIntervalSeconds: 60
-  #     UnhealthyThresholdCount: 10
-  #     HealthCheckPath: "/healthcheck"
-  #     Name: !Sub stripe-proxy-${EnvironmentTypeAbbreviation}-${VPC}
-  #     Port: 80
-  #     Protocol: HTTP
-  #     TargetGroupAttributes:
-  #       - Key: deregistration_delay.timeout_seconds
-  #         Value: 30
-  #     Tags:
-  #       - Key: Project
-  #         Value: stripe-proxy
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: Name
-  #         Value: !Sub stripe-proxy-${EnvironmentType}
-  #       - Key: "prx:cloudformation:stack-name"
-  #         Value: !Ref AWS::StackName
-  #       - Key: "prx:cloudformation:stack-id"
-  #         Value: !Ref AWS::StackId
-  #     VpcId: !Ref VPC
+  StripeProxyTargetGroup:
+    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
+    Properties:
+      HealthCheckIntervalSeconds: 60
+      UnhealthyThresholdCount: 10
+      HealthCheckPath: "/healthcheck"
+      Name: !Sub stripe-proxy-${EnvironmentTypeAbbreviation}-${VPC}
+      Port: 80
+      Protocol: HTTP
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: 30
+      Tags:
+        - Key: Project
+          Value: stripe-proxy
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub stripe-proxy-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      VpcId: !Ref VPC
   # # ALB Listener Rules
   # ALBHTTPSHostWildcardListenerRule:
   #   Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
