Wipe out alb related resources

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -62,7 +62,7 @@ Resources:
       HealthCheckIntervalSeconds: 60
       UnhealthyThresholdCount: 10
       HealthCheckPath: "/healthcheck"
-      Name: !Sub stripe-proxy-tg-${EnvironmentTypeAbbreviation}-${VPC}
+      Name: !Sub stripe-tg-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
       TargetGroupAttributes:
