Parameterize origin protocol in single origin CloudFront template

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -60,6 +60,7 @@ Metadata:
           - CloudFrontLoggingBucket
           - CloudFrontLoggingBucketPrefix
           - CloudFrontOriginAccess
+          - CloudFrontOriginProtocolPolicy
       - Label:
           default: HTTPS Certificate
         Parameters:
@@ -94,6 +95,8 @@ Metadata:
         default: Cached methods
       CloudFrontOriginAccess:
         default: Origin access identity
+      CloudFrontOriginProtocolPolicy:
+        default: Origin protocol policy
       CloudFrontViewerProtocolPolicy:
         default: Viewer protocol policy
       AcmCertificateArn:
@@ -198,6 +201,15 @@ Parameters:
     AllowedValues:
       - 'Yes'
       - 'No'
+  CloudFrontOriginProtocolPolicy:
+    Type: String
+    Description: >
+      The origin protocol policy to apply to your origin
+    Default: https-only
+    AllowedValues:
+      - http-only
+      - match-viewer
+      - https-only
   CloudFrontViewerProtocolPolicy:
     Type: String
     Description: >
@@ -287,7 +299,7 @@ Resources:
                 - !Ref "AWS::NoValue"
                 - HTTPSPort: 443
                   # HTTPPort: Integer
-                  OriginProtocolPolicy: https-only
+                  OriginProtocolPolicy: !Ref CloudFrontOriginProtocolPolicy
                   OriginSSLProtocols:
                     - TLSv1.2
                     - TLSv1.1
