--- a/etc/adzerk-poller.yml
+++ b/etc/adzerk-poller.yml
@@ -137,7 +137,7 @@ Resources:
         Variables:
           ADZERK_API_KEY: !Ref AdzerkApiKey
           SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN: !Ref SlackMessageRelayTopicArn
-      Handler: index.handler
+      Handler: index.lambda_handler
       MemorySize: 128
       Role: !GetAtt PollerFunctionIamRole.Arn
       Runtime: python3.6
