Fix cost report handler definition

--- a/etc/aws-daily-cost-report.yml
+++ b/etc/aws-daily-cost-report.yml
@@ -91,7 +91,7 @@ Resources:
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN: !Ref SlackMessageRelayTopicArn
-      Handler: lambda_function.lambda_handler
+      Handler: index.lambda_handler
       MemorySize: 128
       Role: !GetAtt ReportFunctionIamRole.Arn
       Runtime: python3.6
