--- a/etc/aws-daily-cost-report.yml
+++ b/etc/aws-daily-cost-report.yml
@@ -49,6 +49,7 @@ Resources:
           import boto3
           import os
           import json
+          from datetime import datetime, timedelta
 
           sns = boto3.client('sns')
           ce = boto3.client('ce')
@@ -59,13 +60,18 @@ Resources:
               'Amazon ElastiCache'
           ]
 
+          ri_amounts = {}
+
           def lambda_handler(event, context):
               for service in ri_services:
                   # No data is available for the last three days, so the window needs to be earlier than that
+                  date_start = datetime.today() - timedelta(days=4)
+                  date_end = datetime.today() - timedelta(days=3)
+
                   coverage = ce.get_reservation_coverage(
                       TimePeriod={
-                          'Start': '2018-05-12',
-                          'End': '2018-05-13'
+                          'Start': date_start.strftime('%Y-%m-%d'),
+                          'End': date_end.strftime('%Y-%m-%d')
                       },
                       Granularity='DAILY',
                       Filter={
@@ -78,14 +84,105 @@ Resources:
 
                   percent = coverage['Total']['CoverageHours']['CoverageHoursPercentage']
 
-                  sns.publish(
-                      TopicArn=os.environ['SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN'],
-                      Message=json.dumps({
-                          'channel': '#api-sandbox',
-                          'title': f"RI Coverage {service}",
-                          'text': percent
-                      })
-                  )
+                  ri_amounts[service] = percent
+
+              date_start = datetime.today() - timedelta(days=15)
+              date_end = datetime.today() - timedelta(days=0)
+
+              response = ce.get_cost_and_usage(
+                  TimePeriod={
+                      'Start': date_start.strftime('%Y-%m-%d'),
+                      'End': date_end.strftime('%Y-%m-%d')
+                  },
+                  Granularity='DAILY',
+                  Metrics=[
+                      'UnblendedCost',
+                  ],
+                  Filter={
+                      "Not": {
+                              "Dimensions": {
+                              "Key": "RECORD_TYPE",
+                              "Values": [
+                                  "Refund",
+                                  "Credit",
+                                  "Upfront",
+                                  "Recurring",
+                                  "Tax",
+                                  "Support",
+                                  "Other"
+                              ]
+                          }
+                      }
+                  }
+              )
+
+              url = 'http://image-charts.com/chart?cht=bvs&chs=600x200&chds=a&chls=5&chco=2b9eeb&chd=t:'
+
+              amounts = []
+
+              for result in response['ResultsByTime']:
+                  amounts.append(result['Total']['UnblendedCost']['Amount'])
+
+              url = url + ','.join(amounts)
+
+              url = url + f"&chxr=1,{min(amounts)},{max(amounts)}"
+
+              response = ce.get_cost_and_usage(
+                  TimePeriod={
+                      'Start': date_start.strftime('%Y-%m-%d'),
+                      'End': date_end.strftime('%Y-%m-%d')
+                  },
+                  Granularity='DAILY',
+                  Metrics=[
+                      'UnblendedCost',
+                  ]
+              )
+
+              url2 = 'http://image-charts.com/chart?cht=bvs&chs=600x200&chds=a&chls=5&chco=2b9eeb&chd=t:'
+
+              amounts = []
+
+              for result in response['ResultsByTime']:
+                  amounts.append(result['Total']['UnblendedCost']['Amount'])
+
+              url2 = url2 + ','.join(amounts)
+
+              url2 = url2 + f"&chxr=1,{min(amounts)},{max(amounts)}"
+
+              sns.publish(
+                  TopicArn=os.environ['SLACK_MESSAGE_RELAY_SNS_TOPIC_ARN'],
+                  Message=json.dumps({
+                      'channel': '#ops-billing',
+                      'username': 'AWS Cost Explorer',
+                      'icon_emoji': ':aws:',
+                      'attachments': [
+                          {
+                              'title': 'Reservation Coverage',
+                              'fields': [
+                                  {
+                                      'title': 'EC2',
+                                      'value': ri_amounts["Amazon Elastic Compute Cloud - Compute"],
+                                      'short': True
+                                  }, {
+                                      'title': 'RDS',
+                                      'value': ri_amounts["Amazon Relational Database Service"],
+                                      'short': True
+                                  }, {
+                                      'title': 'ElastiCache',
+                                      'value': ri_amounts["Amazon ElastiCache"],
+                                      'short': True
+                                  }
+                              ]
+                          }, {
+                              'title': 'Usage Costs (All accounts)',
+                              'image_url': url
+                          }, {
+                              'title': 'All Costs',
+                              'image_url': url2
+                          }
+                      ]
+                  })
+              )
       Description: >
         Sends daily messages to Slack with AWS billing information
       Environment:
